test/corpus/Conditional.txt
==================
Conditional
==================

true ? 1 : 2;
// CHECK: true ? 1 : 2;

true ? false ? 1 : 2 : 3;
// CHECK: true ? false ? 1 : 2 : 3;

---

(source_file
  (program
    (expressionStatement
      (conditionalExpression
        (booleanLiteral)
        (integerLiteral
          (integer))
        (integerLiteral
          (integer))))
    (comment
      (litSupport))
    (expressionStatement
      (conditionalExpression
        (booleanLiteral)
        (conditionalExpression
          (booleanLiteral)
          (integerLiteral
            (integer))
          (integerLiteral
            (integer)))
        (integerLiteral
          (integer)))))
  (comment
    (litSupport)))
